Replace Lists to Arrays